[package]
name = "bevy_line_boil"
version = "0.1.0"
edition = "2024"
description = "A Bevy plugin for cartoon 'line boil' vertex displacement effects"
license = "MIT OR Apache-2.0"
repository = "https://github.com/anthropics/bevy_line_boil"
keywords = ["bevy", "shader", "animation", "cartoon", "gamedev"]
categories = ["game-development", "graphics", "rendering"]
readme = "README.md"

[dependencies]
bevy = "0.17"
